--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,15 +27,20 @@
             android:name=".Activity.PerfilActivity"
             android:exported="false"
             android:label="Mi Perfil" />
-        <activity android:name=".Activity.LoginActivity">
+
+        <activity android:name=".Activity.LoginActivity"
+            android:label="Inicio de Sesión">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <activity android:name=".Activity.MenuActivity" />
-        <activity android:name=".Activity.RegistroActivity" />
+        <activity android:name=".Activity.MenuActivity"
+            android:label="Home"/>
+        <activity android:name=".Activity.RegistroActivity"
+            android:label="Registrarse"/>
     </application>
 
 </manifest>
