--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".SoporteActivity"
+            android:exported="false"
+            android:label="Enviar correo al soporte" />
+        <activity
             android:name=".Activity.RecuperarPasswordActivity"
             android:exported="false"
-            android:label="Recuperar mi cuenta"/>
+            android:label="Recuperar mi cuenta" />
         <activity
             android:name=".EliminarActivity"
             android:exported="false"
@@ -27,20 +31,21 @@
             android:name=".Activity.PerfilActivity"
             android:exported="false"
             android:label="Mi Perfil" />
-
-        <activity android:name=".Activity.LoginActivity"
+        <activity
+            android:name=".Activity.LoginActivity"
             android:label="Inicio de Sesión">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity android:name=".Activity.MenuActivity"
-            android:label="Home"/>
-        <activity android:name=".Activity.RegistroActivity"
-            android:label="Registrarse"/>
+        <activity
+            android:name=".Activity.MenuActivity"
+            android:label="Home" />
+        <activity
+            android:name=".Activity.RegistroActivity"
+            android:label="Registrarse" />
     </application>
 
 </manifest>
